RESOLVED FIXED283860
REGRESSION (276312@main): EventHandler::handleWheelEventInternal no longer defers scroll wheel event handling completion
https://bugs.webkit.org/show_bug.cgi?id=283860
Summary REGRESSION (276312@main): EventHandler::handleWheelEventInternal no longer de...
Wenson Hsieh
Reported 2024-11-30 16:49:18 PST
.
Attachments
Wenson Hsieh
Comment 1 2024-11-30 16:54:58 PST
EWS
Comment 2 2024-12-01 10:33:38 PST
Committed 287192@main (f5fb0119fb81): <https://commits.webkit.org/287192@main> Reviewed commits have been landed. Closing PR #37281 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-12-01 10:34:15 PST
Note You need to log in before you can comment on or make changes to this bug.