REGRESSION (276312@main): EventHandler::handleWheelEventInternal no longer defers scroll wheel event handling completion https://bugs.webkit.org/show_bug.cgi?id=283860

Reviewed by Alan Baradlay.

276312@main appears to have unintentionally changed the scope of the RAII deferrer in this method,
such that it adds and then immediately removes a deferral reason (instead of lasting through the
scope of the method itself). Restore the previous behavior, by pulling this out into a `unique_ptr`
that's set only if `scrollableArea` is nonnull.

* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::handleWheelEventInternal):
* Source/WebCore/page/WheelEventTestMonitor.h:

Canonical link: https://commits.webkit.org/287192@main